[package]
name = "frcon"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
bincode = "1.3.3"
chrono = "0.4.34"
crossterm = "0.27.0"
nu-ansi-term = "0.50.0"
reedline = "0.29.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["serde_derive"] }
tokio = { version = "1.36.0", features = ["full"] }
